--- a/Added.html
+++ b/Added.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title>Added</title>
+	<link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/5.0.0/normalize.css">
+	
 	<style type="text/css">
 
 
