--- a/Wedding.html
+++ b/Wedding.html
@@ -4,15 +4,7 @@
 
 
 
-
-<script src="https://use.typekit.net/evc6ibq.js"></script>
-
-<script>try{Typekit.load({ async: true });}catch(e){}</script>
-
-
-
-
-<title>Fabiana & Fabian</title> 
+<title>Jane & John</title> 
 
 
 
