--- a/Wedding.html
+++ b/Wedding.html
@@ -48,7 +48,7 @@
 
   font-family: 'Quicksand', sans-serif;
 
-   background-image: url(http://www2.pictures.livingly.com/mp/k8HVfT2JNMpx.jpg);
+   background-image: url(http://az616578.vo.msecnd.net/files/2016/03/18/635938607706808232-1760606124_weds.jpg);
 
   background-size: 120%; 
 
@@ -237,7 +237,7 @@ margin-right: 20px;
 
  
 
-  <h1>Fabiana & Fabian</h1>
+  <h1>Jane & John</h1>
 
 
 
