--- a/Wedding.html
+++ b/Wedding.html
@@ -58,7 +58,7 @@
 
   a {
 
-    color: #9c1900;
+    color: #6495ED;
 
 text-decoration: none;
 
@@ -76,7 +76,7 @@ text-decoration: none;
 
   a:visited {
 
-    color: #9c1900;
+    color: #6495ED;
 
   }
 
@@ -86,7 +86,7 @@ text-decoration: none;
 
     
 
-    color: #9c1900; 
+    color: #6495ED; 
 
     font-size: 160px;
 
