--- a/Wedding.html
+++ b/Wedding.html
@@ -68,7 +68,7 @@ text-decoration: none;
 
   a:hover {
 
-    color: #454545;
+    color: #5F9EA0;
 
   }
 
@@ -76,7 +76,7 @@ text-decoration: none;
 
   a:visited {
 
-    color: #6495ED;
+    color: #008B8B;
 
   }
 
@@ -94,7 +94,7 @@ text-decoration: none;
 
   h2 {
 
-    color: #b83131;
+    color: #2F4F4F;
 
     font-family: 'Lora', serif;
 
