--- a/Wedding.html
+++ b/Wedding.html
@@ -114,7 +114,7 @@ header {
 
 }
 
-  #events {
+  #timeline {
 
     background-color: #FFF;
 
@@ -226,7 +226,7 @@ margin-right: 20px;
 
 <nav>
 
-<a href="#"> About us        | </a> <a href="#">Event Dates         |</a> <a href="#"> Photographies</a> 
+<a href="#"> Our Story        | </a> <a href="#"> The Day         |</a> <a href="#"> Memories</a> 
 
 </nav>
 
@@ -247,23 +247,23 @@ margin-right: 20px;
 
 </header>
 
-<section id="events">
+<section id="timeline">
 
-  <div class="container">
+  <div class="timeline">
 
-<h2>Events</h2>
-
-<article> 
-
-<h3>Dinner at the Beach</h3> <p>Casual in White</p></article>
+<h2>Timeline</h2>
 
 <article> 
 
-<h3>Lunch at the Hotel</h3> <p>Cocktail Dressing</p> </article>
+<h3>Meet and Greet Cocktail Hour</h3> <p>Casual Attire</p></article>
 
 <article> 
 
-<h3>Wedding</h3> <p>Black Tie</p> </article>
+<h3>Wedding Ceremony</h3> <p>Black Tie @ Hotel Chapel</p> </article>
+
+<article> 
+
+<h3>Wedding Reception</h3> <p>Grand Ball Room</p> </article>
 
 </div>
 
@@ -272,16 +272,14 @@ margin-right: 20px;
 
 
 
-<section id="our_story"> 
+<section id="Us..."> 
 
-  <div class="container">
+  <div class="Us...">
 
-<h2> Our story </h2>
+<h2> Us... </h2>
 
-<p class="two-thirds">  Daniela and Eric met when they were on the last year of highschool. As the years passed by, they both started college on different countries, but this wasn't an obsticle for them...
-
-
-
+<p class="two-thirds">  We met 14 years ago while we were both attending college and we both volunteered at the same animal shelter for extra credit on a class.  Our love and passion for animals 
+  drew us closer an eventually we were inseparable.  Now here we are ready to spend the rest of our lives together and to celebrate with all of out loved ones.
 
 </div>
 
@@ -290,9 +288,9 @@ margin-right: 20px;
 
 
 
-<section id="our-latest-photo">
+<section id="Things to Know">
 
-<h2>Our Latest Photo</h2>
+<h2>Things to Know</h2>
 
 <a class="test-popup-link" href="https://static.pexels.com/photos/13892/The-wedding-free-license-CC0.jpg"> <img src="https://static.pexels.com/photos/13892/The-wedding-free-license-CC0.jpg" width="250px" alt="My Latest Work"> </a>
 
