--- a/Wedding.html
+++ b/Wedding.html
@@ -176,7 +176,7 @@ margin-right: 20px;
 
 }
 
-#our_story{
+#Us...{
 
   background-image: url(http://subtlepatterns2015.subtlepatterns.netdna-cdn.com/patterns/creampaper.png);
 
@@ -192,7 +192,7 @@ margin-right: 20px;
 
 }
 
-#our-latest-photo {
+#things-to-Know {
 
   background-color: #FFF;
 
@@ -288,7 +288,7 @@ margin-right: 20px;
 
 
 
-<section id="Things to Know">
+<section id="Things-to-Know">
 
 <h2>Things to Know</h2>
 
