--- a/Wedding.html
+++ b/Wedding.html
@@ -136,17 +136,13 @@ header {
 
     height: 150px;
 
-    float:left;
-
-    background-image: url(https://wedding-pictures.onewed.com/match/images/49037/fall-winter-weddings-romantic-wedding-photo-bride-groom-outside.full.jpg);
+    float:center;
 
     margin: 5px;
 
-    border-radius: 14px;
-
     font-family: 'Lora', serif;
 
-    color: #430323;
+    color: #FF7F50;
 
   }
 
