--- a/Wedding.html
+++ b/Wedding.html
@@ -251,7 +251,8 @@ margin-right: 20px;
 
 <article> 
 
-<h3>Meet and Greet Cocktail Hour</h3> <p>Casual Attire</p></article>
+<h3>Meet and Greet Cocktail Hour</h3> <p>Casual Attire</p>
+    <img src="http://apis.xogrp.com/media-api/images/cc797909-8d8e-4fc1-94bd-68afa24a37c9~rs_768.h?quality=75" alt="cocktails" style="width:304px;height:228px;"></article>
 
 <article> 
 
