--- a/Wedding.html
+++ b/Wedding.html
@@ -255,12 +255,14 @@ margin-right: 20px;
     <img src="http://apis.xogrp.com/media-api/images/cc797909-8d8e-4fc1-94bd-68afa24a37c9~rs_768.h?quality=75" alt="cocktails" style="width:304px;height:228px;"></article>
 
 <article> 
+  <br>
 
-<h3>Wedding Ceremony</h3> <p>Black Tie @ Hotel Chapel</p> </article>
+<h3>Wedding Ceremony</h3> <p>Black Tie @ Hotel Chapel</p> <img src="https://s-media-cache-ak0.pinimg.com/originals/5f/8c/55/5f8c556e4a25d64a4ef40eca425cf20a.jpg" alt="Chapel" style="width:304px;height:228px;"></article>
 
 <article> 
+  <br>
 
-<h3>Wedding Reception</h3> <p>Grand Ball Room</p> </article>
+<h3>Wedding Reception</h3> <p>Grand Ball Room</p> <img src="https://santabarbaravenues.com/photos/gallery/wedding-reception-pictures/large/wedding-reception-dancing.jpg?1287777472" alt="Reception" style="width:304px;height:228px;"></article>
 
 </div>
 
