--- a/Wedding.html
+++ b/Wedding.html
@@ -7,40 +7,9 @@
 <title>Jane & John</title> 
 
 
-
-
-
-
-
-<link href='https://fonts.googleapis.com/css?family=Allura' rel='stylesheet' type='text/css'>
-
-<link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
-
-
-
-
-  
-
-
-
-
 <style>
 
-  
-
-@font-face {
-
-    font-family: 'alex_brushregular';
-
-    src: url('alexbrush-regular-webfont.woff2') format('woff2'),
-
-         url('alexbrush-regular-webfont.woff') format('woff');
-
-    font-weight: normal;
-
-    font-style: normal;
-
-}
+ 
 
   body{
 
@@ -80,33 +49,7 @@ text-decoration: none;
 
   }
 
-  h1 {
-
-    font-family: "adorn-smooth-pomander",sans-serif;
-
-    
-
-    color: #6495ED; 
-
-    font-size: 160px;
-
-  }
-
-  h2 {
-
-    color: #2F4F4F;
-
-    font-family: 'Lora', serif;
-
-  }
-
-  p {
-
-    color: dimGray;
-
-    font-family: 'Lora', serif;
-
-  }
+ 
 
 header {
 
@@ -114,105 +57,9 @@ header {
 
 }
 
-  #timeline {
-
-    background-color: #FFF;
-
-    overflow: hidden;
-
-    border-radius: 14px;
-
-    padding:20px;
-
-    margin: 20px;
-
-  }
-
-  article {
-
-    padding: 10px;
-
-    width: 270px;
-
-    height: 150px;
-
-    float:center;
-
-    margin: 5px;
-
-    font-family: 'Lora', serif;
-
-    color: #FF7F50;
-
-  }
-
-    #photo{
-
-    border-radius: 14px;
-
-    }
-
-.container {
-
-  width: 930px;
-
-  /*centering*/
-
-  margin: 0 auto;
-
-}
-
-.two-thirds {
-
-float: left;
-
-text-align: justify;
-
-margin-right: 20px;
-
-}
-
-#Us...{
-
-  background-image: url(http://subtlepatterns2015.subtlepatterns.netdna-cdn.com/patterns/creampaper.png);
-
-    overflow: hidden;
-
-    border-radius: 14px;
-
-    padding:20px;
-
-    margin: 20px;
-
-    overflow: hidden;
-
-}
-
-#things-to-Know {
-
-  background-color: #FFF;
-
-  border-radius: 14px;
-
-  padding:20px;
-
-  margin: 20px;
-
-  overflow: hidden;
-
-}
+ 
 
 </style>
-
-
-
-
-<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.0.0/jquery.magnific-popup.min.js"> </script>
-
-<link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.0.0/magnific-popup.min.css" rel="stylesheet">
-
 
 
 
@@ -243,7 +90,7 @@ margin-right: 20px;
 
 </header>
 
-<section id="timeline">
+<section>
 
   <div class="timeline">
 
@@ -271,7 +118,7 @@ margin-right: 20px;
 
 
 
-<section id="Us..."> 
+<section> 
 
   <div class="Us...">
 
@@ -287,7 +134,7 @@ margin-right: 20px;
 
 
 
-<section id="Things-to-Know">
+<section>
 
 <h2>Things to Know</h2>
 
@@ -307,19 +154,7 @@ margin-right: 20px;
 
 
 
-<script>
 
-$('.test-popup-link').magnificPopup({
-
-  type: 'image',
-
-  gallery: {enabled:true}
-
-  // other options
-
-});
-
-</script>
 
 
 
