--- a/Wedding.html
+++ b/Wedding.html
@@ -27,7 +27,28 @@
   color: #6459ED;
   font-size: 165px;
  }
+ H2 {
+  color: #2F4F4F;
+  font-size: 90px;
+ }
+ 
+ article {
 
+    padding: 10px;
+
+    width: 270px;
+
+    height: 150px;
+
+    float:center;
+
+    margin: 5px;
+
+    font-family: 'Lora', serif;
+
+    color: #FF7F50;
+ }
+  
   
 
   a {
