--- a/Wedding.html
+++ b/Wedding.html
@@ -32,7 +32,7 @@
   font-size: 90px;
  }
  
- article {
+ .part1 {
 
     padding: 10px;
 
@@ -122,7 +122,7 @@ header {
 
 <h2>Timeline</h2>
 
-<article> 
+<article id="part1"> 
 
 <h3>Meet and Greet Cocktail Hour</h3> <p>Casual Attire</p>
     <img src="http://apis.xogrp.com/media-api/images/cc797909-8d8e-4fc1-94bd-68afa24a37c9~rs_768.h?quality=75" alt="cocktails" style="width:304px;height:228px;"></article>
