--- a/Wedding.html
+++ b/Wedding.html
@@ -42,7 +42,7 @@
 
     
 
-    margin: 5px;
+    margin: 100px;
 
     font-family: 'Lora', serif;
 
@@ -125,7 +125,7 @@ header {
 <article id="part1"> 
 
 <h3>Meet and Greet Cocktail Hour</h3> <p>Casual Attire</p>
-    <img src="http://apis.xogrp.com/media-api/images/cc797909-8d8e-4fc1-94bd-68afa24a37c9~rs_768.h?quality=75" alt="cocktails" style="width:304px;height:228px;"></article>
+    <img src="http://apis.xogrp.com/media-api/images/cc797909-8d8e-4fc1-94bd-68afa24a37c9~rs_768.h?quality=75" alt="cocktails"></article>
 
 <article> 
   <br>
