--- a/Wedding.html
+++ b/Wedding.html
@@ -4,12 +4,51 @@
 
 
 
-<title>Jane & John</title> 
+
+<script src="https://use.typekit.net/evc6ibq.js"></script>
+
+<script>try{Typekit.load({ async: true });}catch(e){}</script>
+
+
+
+
+<title>Fabiana & Fabian</title> 
+
+
+
+
+
+
+
+<link href='https://fonts.googleapis.com/css?family=Allura' rel='stylesheet' type='text/css'>
+
+<link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
+
+
+
+
+  
+
+
 
 
 <style>
 
- 
+  
+
+@font-face {
+
+    font-family: 'alex_brushregular';
+
+    src: url('alexbrush-regular-webfont.woff2') format('woff2'),
+
+         url('alexbrush-regular-webfont.woff') format('woff');
+
+    font-weight: normal;
+
+    font-style: normal;
+
+}
 
   body{
 
@@ -17,45 +56,17 @@
 
   font-family: 'Quicksand', sans-serif;
 
-   background-image: url(http://az616578.vo.msecnd.net/files/2016/03/18/635938607706808232-1760606124_weds.jpg);
+   background-image: url(http://www2.pictures.livingly.com/mp/k8HVfT2JNMpx.jpg);
 
   background-size: 120%; 
 
   }
- 
- h1 {
-  color: #6459ED;
-  font-size: 165px;
- }
- H2 {
-  color: #2F4F4F;
-  font-size: 90px;
- }
- 
- #part1 {
 
-    padding: 10px;
-
-    width: 270px;
-
-    height: 150px;
-  text-align:center;
-  
-
-    
-
-    margin: 100px;
-
-    font-family: 'Lora', serif;
-
-    color: #FF7F50;
- }
-  
   
 
   a {
 
-    color: #6495ED;
+    color: #9c1900;
 
 text-decoration: none;
 
@@ -65,7 +76,7 @@ text-decoration: none;
 
   a:hover {
 
-    color: #5F9EA0;
+    color: #454545;
 
   }
 
@@ -73,11 +84,37 @@ text-decoration: none;
 
   a:visited {
 
-    color: #008B8B;
+    color: #9c1900;
 
   }
 
- 
+  h1 {
+
+    font-family: "adorn-smooth-pomander",sans-serif;
+
+    
+
+    color: #9c1900; 
+
+    font-size: 160px;
+
+  }
+
+  h2 {
+
+    color: #b83131;
+
+    font-family: 'Lora', serif;
+
+  }
+
+  p {
+
+    color: dimGray;
+
+    font-family: 'Lora', serif;
+
+  }
 
 header {
 
@@ -85,9 +122,109 @@ header {
 
 }
 
- 
+  #events {
+
+    background-color: #FFF;
+
+    overflow: hidden;
+
+    border-radius: 14px;
+
+    padding:20px;
+
+    margin: 20px;
+
+  }
+
+  article {
+
+    padding: 10px;
+
+    width: 270px;
+
+    height: 150px;
+
+    float:left;
+
+    background-image: url(https://wedding-pictures.onewed.com/match/images/49037/fall-winter-weddings-romantic-wedding-photo-bride-groom-outside.full.jpg);
+
+    margin: 5px;
+
+    border-radius: 14px;
+
+    font-family: 'Lora', serif;
+
+    color: #430323;
+
+  }
+
+    #photo{
+
+    border-radius: 14px;
+
+    }
+
+.container {
+
+  width: 930px;
+
+  /*centering*/
+
+  margin: 0 auto;
+
+}
+
+.two-thirds {
+
+float: left;
+
+text-align: justify;
+
+margin-right: 20px;
+
+}
+
+#our_story{
+
+  background-image: url(http://subtlepatterns2015.subtlepatterns.netdna-cdn.com/patterns/creampaper.png);
+
+    overflow: hidden;
+
+    border-radius: 14px;
+
+    padding:20px;
+
+    margin: 20px;
+
+    overflow: hidden;
+
+}
+
+#our-latest-photo {
+
+  background-color: #FFF;
+
+  border-radius: 14px;
+
+  padding:20px;
+
+  margin: 20px;
+
+  overflow: hidden;
+
+}
 
 </style>
+
+
+
+
+<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.0.0/jquery.magnific-popup.min.js"> </script>
+
+<link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.0.0/magnific-popup.min.css" rel="stylesheet">
+
 
 
 
@@ -97,7 +234,7 @@ header {
 
 <nav>
 
-<a href="#"> Our Story        | </a> <a href="#"> The Day         |</a> <a href="#"> Memories</a> 
+<a href="#"> About us        | </a> <a href="#">Event Dates         |</a> <a href="#"> Photographies</a> 
 
 </nav>
 
@@ -108,7 +245,7 @@ header {
 
  
 
-  <h1>Jane & John</h1>
+  <h1>Fabiana & Fabian</h1>
 
 
 
@@ -118,26 +255,23 @@ header {
 
 </header>
 
-<section>
+<section id="events">
 
-  <div class="timeline">
+  <div class="container">
 
-<h2>Timeline</h2>
-
-<article id="part1"> 
-
-<h3>Meet and Greet Cocktail Hour</h3> <p>Casual Attire</p>
-    <img src="http://apis.xogrp.com/media-api/images/cc797909-8d8e-4fc1-94bd-68afa24a37c9~rs_768.h?quality=75" alt="cocktails"></article>
+<h2>Events</h2>
 
 <article> 
-  <br>
 
-<h3>Wedding Ceremony</h3> <p>Black Tie @ Hotel Chapel</p> <img src="https://s-media-cache-ak0.pinimg.com/originals/5f/8c/55/5f8c556e4a25d64a4ef40eca425cf20a.jpg" alt="Chapel" style="width:304px;height:228px;"></article>
+<h3>Dinner at the Beach</h3> <p>Casual in White</p></article>
 
 <article> 
-  <br>
 
-<h3>Wedding Reception</h3> <p>Grand Ball Room</p> <img src="https://santabarbaravenues.com/photos/gallery/wedding-reception-pictures/large/wedding-reception-dancing.jpg?1287777472" alt="Reception" style="width:304px;height:228px;"></article>
+<h3>Lunch at the Hotel</h3> <p>Cocktail Dressing</p> </article>
+
+<article> 
+
+<h3>Wedding</h3> <p>Black Tie</p> </article>
 
 </div>
 
@@ -146,14 +280,16 @@ header {
 
 
 
-<section> 
+<section id="our_story"> 
 
-  <div class="Us...">
+  <div class="container">
 
-<h2> Us... </h2>
+<h2> Our story </h2>
 
-<p class="two-thirds">  We met 14 years ago while we were both attending college and we both volunteered at the same animal shelter for extra credit on a class.  Our love and passion for animals 
-  drew us closer an eventually we were inseparable.  Now here we are ready to spend the rest of our lives together and to celebrate with all of out loved ones.
+<p class="two-thirds">  Daniela and Eric met when they were on the last year of highschool. As the years passed by, they both started college on different countries, but this wasn't an obsticle for them...
+
+
+
 
 </div>
 
@@ -162,9 +298,9 @@ header {
 
 
 
-<section>
+<section id="our-latest-photo">
 
-<h2>Things to Know</h2>
+<h2>Our Latest Photo</h2>
 
 <a class="test-popup-link" href="https://static.pexels.com/photos/13892/The-wedding-free-license-CC0.jpg"> <img src="https://static.pexels.com/photos/13892/The-wedding-free-license-CC0.jpg" width="250px" alt="My Latest Work"> </a>
 
@@ -182,7 +318,19 @@ header {
 
 
 
+<script>
 
+$('.test-popup-link').magnificPopup({
+
+  type: 'image',
+
+  gallery: {enabled:true}
+
+  // other options
+
+});
+
+</script>
 
 
 
