--- a/Wedding.html
+++ b/Wedding.html
@@ -66,7 +66,7 @@
 
   a {
 
-    color: #9c1900;
+    color: #6495ED;
 
 text-decoration: none;
 
@@ -76,7 +76,7 @@ text-decoration: none;
 
   a:hover {
 
-    color: #454545;
+    color: #008B8B;
 
   }
 
@@ -84,7 +84,7 @@ text-decoration: none;
 
   a:visited {
 
-    color: #9c1900;
+    color: #6495ED;
 
   }
 
@@ -94,7 +94,7 @@ text-decoration: none;
 
     
 
-    color: #9c1900; 
+    color: #6495ED; 
 
     font-size: 160px;
 
@@ -102,7 +102,7 @@ text-decoration: none;
 
   h2 {
 
-    color: #b83131;
+    color: #556B2F;
 
     font-family: 'Lora', serif;
     font-size: 50px;
