--- a/Wedding.html
+++ b/Wedding.html
@@ -180,7 +180,9 @@ header {
 float: left;
 
 text-align: justify;
-
+  font-size: 25px;
+ 
+color: #6495ED;
 margin-right: 20px;
 
 }
@@ -260,19 +262,19 @@ margin-right: 20px;
 
   <div class="container">
 
-<h2>Events</h2>
+<h2>Timeline</h2>
 
 <article> 
 
-<h3>Dinner at the Beach</h3> <p>Casual in White</p></article>
+<h3>Meet and Greet Cocktails</h3> <p>Grand Hall Lobby Bar</p></article>
 
 <article> 
 
-<h3>Lunch at the Hotel</h3> <p>Cocktail Dressing</p> </article>
+<h3>Wedding Ceremony</h3> <p>Hotel Chapel</p> </article>
 
 <article> 
 
-<h3>Wedding</h3> <p>Black Tie</p> </article>
+<h3>Wedding Reception</h3> <p>Grand Events Hall</p> </article>
 
 </div>
 
@@ -287,8 +289,9 @@ margin-right: 20px;
 
 <h2> Our story </h2>
 
-<p class="two-thirds">  Daniela and Eric met when they were on the last year of highschool. As the years passed by, they both started college on different countries, but this wasn't an obsticle for them...
-
+<p class="two-thirds">  Jane and John met 9 years ago while attending college.  During a volunteering assignment to help the local animal shelter, thye both
+  met and thorugh their love of animals they became inseparable from that day forward.  Now they have decided to spend the rest of their lives together and they want to celebrate this 
+  occassion surrouynded by their loved ones.</p>
 
 
 
