--- a/Wedding.html
+++ b/Wedding.html
@@ -287,7 +287,7 @@ margin-right: 20px;
 
   <div class="container">
 
-<h2> Our story </h2>
+<h2> Us... </h2>
 
 <p class="two-thirds">  Jane and John met 9 years ago while attending college.  During a volunteering assignment to help the local animal shelter, thye both
   met and thorugh their love of animals they became inseparable from that day forward.  Now they have decided to spend the rest of their lives together and they want to celebrate this 
@@ -304,7 +304,7 @@ margin-right: 20px;
 
 <section id="our-latest-photo">
 
-<h2>Our Latest Photo</h2>
+<h2>Things to know</h2>
 
 <a class="test-popup-link" href="https://static.pexels.com/photos/13892/The-wedding-free-license-CC0.jpg"> <img src="https://static.pexels.com/photos/13892/The-wedding-free-license-CC0.jpg" width="250px" alt="My Latest Work"> </a>
 
