--- a/Wedding.html
+++ b/Wedding.html
@@ -238,7 +238,7 @@ margin-right: 20px;
 
 <nav>
 
-<a href="#"> About us        | </a> <a href="#">Event Dates         |</a> <a href="#"> Photographies</a> 
+<a href="#"> Us...        | </a> <a href="#">Wedding Schedule         |</a> <a href="#"> Things to Know</a> 
 
 </nav>
 
@@ -284,7 +284,7 @@ margin-right: 20px;
 
 
 
-<section id="Us..."> 
+<section id="Us"> 
 
   <div class="container">
 
@@ -303,7 +303,7 @@ margin-right: 20px;
 
 
 
-<section id="Things_to_know">
+<section id="Things-to-know">
 
 <h2>Things to know</h2>
 
