--- a/Wedding.html
+++ b/Wedding.html
@@ -123,7 +123,7 @@ header {
 
 }
 
-  #schedule {
+  #events {
 
     background-image: url(https://c2.staticflickr.com/4/3165/2558160805_c15dd40154_b.jpg);
 
@@ -188,7 +188,7 @@ margin-right: 20px;
 
 }
 
-#Us {
+#our_story {
 
   background-image: url(https://c2.staticflickr.com/4/3165/2558160805_c15dd40154_b.jpg);
 
@@ -204,7 +204,7 @@ margin-right: 20px;
 
 }
 
-#Things_to_know {
+#our-latest-photo  {
 
   background-image: url(https://c2.staticflickr.com/4/3165/2558160805_c15dd40154_b.jpg);
 
@@ -259,7 +259,7 @@ margin-right: 20px;
 
 </header>
 
-<section id="Schedule">
+<section id="events">
 
   <div class="container">
 
@@ -284,7 +284,7 @@ margin-right: 20px;
 
 
 
-<section id="Us"> 
+<section id="our_story"> 
 
   <div class="container">
 
@@ -303,7 +303,7 @@ margin-right: 20px;
 
 
 
-<section id="Things-to-know">
+<section id="our-latest-photo ">
 
 <h2>Things to know</h2>
 
