--- a/Wedding.html
+++ b/Wedding.html
@@ -29,20 +29,6 @@
 
   
 
-@font-face {
-
-    font-family: 'alex_brushregular';
-
-    src: url('alexbrush-regular-webfont.woff2') format('woff2'),
-
-         url('alexbrush-regular-webfont.woff') format('woff');
-
-    font-weight: normal;
-
-    font-style: normal;
-
-}
-
   body{
 
   text-align:center;
@@ -106,9 +92,10 @@ text-decoration: none;
 
   p {
 
-    color: dimGray;
+    color: #8B0000;
 
-    font-family: 'Lora', serif;
+    font-family: 'Palatino', serif;
+    font-size: 15px;
 
   }
 
