--- a/Wedding.html
+++ b/Wedding.html
@@ -129,7 +129,7 @@ header {
 
     float:left;
 
-    background-image: url(https://wedding-pictures.onewed.com/match/images/49037/fall-winter-weddings-romantic-wedding-photo-bride-groom-outside.full.jpg);
+    background-image: url(http://webdesignerdepot.s3.amazonaws.com/default-images/26.jpg);
 
     margin: 5px;
 
