--- a/Wedding.html
+++ b/Wedding.html
@@ -189,6 +189,9 @@ margin-right: 20px;
 #our-latest-photo  {
 
   background-image: url(https://c2.staticflickr.com/4/3165/2558160805_c15dd40154_b.jpg);
+  
+  width: 270px;
+  height: 150px;
 
   border-radius: 14px;
 
