--- a/Wedding.html
+++ b/Wedding.html
@@ -215,7 +215,7 @@ margin-right: 20px;
 
 <nav>
 
-<a href="#"> Us...        | </a> <a href="#">Wedding Schedule         |</a> <a href="#"> Things to Know</a> 
+<a href="#"> Timeline        | </a> <a href="#">Us...         |</a> <a href="#"> Things to Know</a> 
 
 </nav>
 
