--- a/Wedding.html
+++ b/Wedding.html
@@ -67,6 +67,11 @@
 
   }
   
+  h3 {
+    color: #2F4F4F;
+    font-family: "Times New Roman", Times, serif;
+    font-size: 25px;
+  
    a {
 
     color: #6495ED;
