--- a/Wedding.html
+++ b/Wedding.html
@@ -71,6 +71,8 @@
     color: #2F4F4F;
     font-family: "Times New Roman", Times, serif;
     font-size: 25px;
+    text-decoration: underline;
+  }
   
    a {
 
