--- a/Wedding.html
+++ b/Wedding.html
@@ -9,7 +9,7 @@
 
 
 
-<title>Jane & John</title> 
+<title>Jane & John's Wedding</title> 
 
 
 
@@ -234,6 +234,8 @@ margin-right: 20px;
  
 
   <h1>Jane & John</h1>
+    <br>
+    <h3>March 11, 2017</h3>
 
 
 
