--- a/Wedding.html
+++ b/Wedding.html
@@ -125,6 +125,10 @@ header {
     margin: 20px;
 
   }
+  
+  #march {
+    text-decoration: none;
+  }
 
   article {
 
@@ -235,7 +239,7 @@ margin-right: 20px;
 
   <h1>Jane & John</h1>
     <br>
-    <h3>March 11, 2017</h3>
+    <h3 id="march">March 11, 2017</h3>
 
 
 
@@ -272,7 +276,7 @@ margin-right: 20px;
 
 <section id="our_story"> 
 
-  <div class="container">
+
 
 <h2> Us... </h2>
 
@@ -280,9 +284,6 @@ margin-right: 20px;
   met and thorugh their love of animals they became inseparable from that day forward.  Now they have decided to spend the rest of their lives together and they want to celebrate this 
   occassion surrouynded by their loved ones.</p>
 
-
-
-</div>
 
 </section>
 
@@ -305,32 +306,6 @@ margin-right: 20px;
 
 
 </section>
-
-
-
-
-
-
-
-
-
-
-<script>
-
-$('.test-popup-link').magnificPopup({
-
-  type: 'image',
-
-  gallery: {enabled:true}
-
-  // other options
-
-});
-
-</script>
-
-
-
 
 </body>
 
