--- a/Wedding.html
+++ b/Wedding.html
@@ -197,7 +197,7 @@ margin-right: 20px;
 
 }
 
-#our-latest-photo  {
+#stuff  {
 
   background-image: url(https://c2.staticflickr.com/4/3165/2558160805_c15dd40154_b.jpg);
 
@@ -290,7 +290,7 @@ margin-right: 20px;
 
 
 
-<section id="our-latest-photo">
+<section id="stuff">
 
 <h2>Things to know</h2>
   <h3>Gift Registry</h3>
