--- a/Wedding.html
+++ b/Wedding.html
@@ -105,6 +105,17 @@ text-decoration: none;
     font-size: 15px;
 
   }
+  
+  .container {
+
+  width: 930px;
+
+  /*centering*/
+
+  margin: 0 auto;
+
+}
+
 
 header {
 
