--- a/Wedding.html
+++ b/Wedding.html
@@ -173,7 +173,7 @@ header {
 
 }
 
-.two-thirds {
+#story {
 
 float: left;
 
@@ -284,7 +284,7 @@ margin-right: 20px;
 
 <h2> Us... </h2>
 
-<p class="two-thirds">  Jane and John met 9 years ago while attending college.  During a volunteering assignment to help the local animal shelter, thye both
+<p id="story">  Jane and John met 9 years ago while attending college.  During a volunteering assignment to help the local animal shelter, thye both
   met and thorugh their love of animals they became inseparable from that day forward.  Now they have decided to spend the rest of their lives together and they want to celebrate this 
   occassion surrouynded by their loved ones.</p>
 
