--- a/Wedding.html
+++ b/Wedding.html
@@ -81,7 +81,7 @@ text-decoration: none;
 
   }
   
-  .container {
+  .decoration {
 
   width: 930px;
 
@@ -132,7 +132,7 @@ header {
 
     border-radius: 14px;
 
-    font-family: 'Lora', serif;
+    font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
 
     color: #430323;
 
@@ -176,13 +176,6 @@ header {
 
 </style>
 
-
-
-
-
-
-
-
 </head>
 
 <body>
@@ -198,23 +191,15 @@ header {
 
   <header>
 
- 
-
-  <h1>Jane & John</h1>
+    <h1>Jane & John</h1>
     <br>
     <h3 id="march">March 11, 2017</h3>
-
-
-
-
-
-
 
 </header>
 
 <section id="events">
 
-  <div class="container">
+  <div class="decoration">
 
 <h2>Timeline</h2>
 
