--- a/Wedding.html
+++ b/Wedding.html
@@ -182,7 +182,7 @@ header {
 
 <nav>
 
-<a href="#"> Timeline        | </a> <a href="#">Us...         |</a> <a href="#"> Things to Know</a> 
+<a href="#" style="font-size: 20px"> Timeline        | </a> <a href="#" style="font-size: 20px">Us...         |</a> <a href="#" style="font-size: 20px"> Things to Know</a> 
 
 </nav>
 
