--- a/Wedding.html
+++ b/Wedding.html
@@ -144,7 +144,7 @@ header {
 
     }
 
-#our_story {
+#journey {
 
   background-image: url(https://c2.staticflickr.com/4/3165/2558160805_c15dd40154_b.jpg);
 
@@ -222,7 +222,7 @@ header {
 
 
 
-<section id="our_story"> 
+<section id="journey"> 
 
 
 
