--- a/Wedding.html
+++ b/Wedding.html
@@ -1,6 +1,8 @@
 <!doctype html>
 
 <head>
+  
+  <link rel="stylesheet" href="/path/to/css/stylesheet.css" type="text/css" charset="utf-8" /> 
 
   <title>Jane & John's Wedding</title> 
 
@@ -132,7 +134,7 @@ header {
 
     border-radius: 14px;
 
-    font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
+    font-family: 'harabarahanditalic';
 
     color: #430323;
 
