--- a/Wedding.html
+++ b/Wedding.html
@@ -54,7 +54,7 @@
   
   h3 {
     color: #2F4F4F;
-    font-family: "Times New Roman", Times, serif;
+    font-family: 'harabarahanditalic';
     font-size: 25px;
     text-decoration: underline;
   }
