--- a/Wedding.html
+++ b/Wedding.html
@@ -19,6 +19,19 @@
     font-style: normal;
 
 }
+  
+  @font-face {
+    font-family: 'aquilinetworegular';
+    src: url('Aquiline_two_font/AquilineTwo-webfont.eot');
+    src: url('Aquiline_two_font/AquilineTwo-webfont.eot?#iefix') format('embedded-opentype'),
+         url('Aquiline_two_font/AquilineTwo-webfont.woff') format('woff'),
+         url('Aquiline_two_font/AquilineTwo-webfont.ttf') format('truetype'),
+         url('Aquiline_two_font/AquilineTwo-webfont.svg#aquilinetworegular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 
 
   
@@ -38,7 +51,7 @@
 
   h1 {
 
-    font-family: 'harabarahanditalic';
+    font-family: 'aquilinetworegular';
     color: #6495ED; 
     font-size: 160px;
 
