--- a/Wedding.html
+++ b/Wedding.html
@@ -60,7 +60,7 @@
   h2 {
 
     color: #556B2F;
-    font-family: 'Lora', serif;
+    font-family: 'harabarahanditalic';
     font-size: 50px;
 
   }
