--- a/Wedding.html
+++ b/Wedding.html
@@ -10,11 +10,11 @@
   
   @font-face {
     font-family: 'harabarahanditalic';
-    src: url('Harabarahand_stylesheet.css/HarabaraHand-webfont.eot');
-    src: url('Harabarahand_stylesheet.css/HarabaraHand-webfont.eot?#iefix') format('embedded-opentype'),
-         url('Harabarahand_stylesheet.css/HarabaraHand-webfont.woff') format('woff'),
-         url('Harabarahand_stylesheet.css/HarabaraHand-webfont.ttf') format('truetype'),
-         url('Harabarahand_stylesheet.css/HarabaraHand-webfont.svg#harabarahanditalic') format('svg');
+    src: url('GWDA273/Harabarahand_stylesheet.css/HarabaraHand-webfont.eot');
+    src: url('GWDA273/Harabarahand_stylesheet.css/HarabaraHand-webfont.eot?#iefix') format('embedded-opentype'),
+         url('GWDA273/Harabarahand_stylesheet.css/HarabaraHand-webfont.woff') format('woff'),
+         url('GWDA273/Harabarahand_stylesheet.css/HarabaraHand-webfont.ttf') format('truetype'),
+         url('GWDA273/Harabarahand_stylesheet.css/HarabaraHand-webfont.svg#harabarahanditalic') format('svg');
     font-weight: normal;
     font-style: normal;
 
@@ -22,11 +22,11 @@
   
   @font-face {
     font-family: 'aquilinetworegular';
-    src: url('Aquiline_stylesheet.css/AquilineTwo-webfont.eot');
-    src: url('Aquiline_stylesheet.css/AquilineTwo-webfont.eot?#iefix') format('embedded-opentype'),
-         url('Aquiline_stylesheet.css/AquilineTwo-webfont.woff') format('woff'),
-         url('Aquiline_stylesheet.css/AquilineTwo-webfont.ttf') format('truetype'),
-         url('Aquiline_stylesheet.css/AquilineTwo-webfont.svg#aquilinetworegular') format('svg');
+    src: url('GWDA273/Aquiline_stylesheet.css/AquilineTwo-webfont.eot');
+    src: url('GWDA273/Aquiline_stylesheet.css/AquilineTwo-webfont.eot?#iefix') format('embedded-opentype'),
+         url('GWDA273/Aquiline_stylesheet.css/AquilineTwo-webfont.woff') format('woff'),
+         url('GWDA273/Aquiline_stylesheet.css/AquilineTwo-webfont.ttf') format('truetype'),
+         url('GWDA273/Aquiline_stylesheet.css/AquilineTwo-webfont.svg#aquilinetworegular') format('svg');
     font-weight: normal;
     font-style: normal;
 
