--- a/Wedding.html
+++ b/Wedding.html
@@ -6,6 +6,9 @@
 
   <title>Jane & John's Wedding</title> 
 
+  
+  <link rel="Aquiline-two-fontfacekit.zip" type="text/css" href="mystyle.css">
+  <link rel="HarabaraHand.zip" type="text/css" href="mystyle.css">
 <style>
   
   
