--- a/Wedding.html
+++ b/Wedding.html
@@ -7,8 +7,7 @@
   <title>Jane & John's Wedding</title> 
 
   
-  <link rel="Aquiline-two-fontfacekit.zip" type="text/css" href="mystyle.css">
-  <link rel="HarabaraHand.zip" type="text/css" href="mystyle.css">
+  <link rel="stylesheet" type="text/css" href="stylesheet.css">
 <style>
   
   
