--- a/Wedding.html
+++ b/Wedding.html
@@ -80,7 +80,7 @@ font-family: 'aquilinetworegular';
   p {
 
     color: #8B0000;
-    font-family: 'Palatino', serif;
+ font-family: 'aquilinetworegular';
     font-size: 15px;
 
   }
