--- a/Wedding.html
+++ b/Wedding.html
@@ -6,9 +6,8 @@
 
   <title>Jane & John's Wedding</title> 
 
-  
-  <script src="https://use.typekit.net/tnu8nlm.js"></script>
- <script> try{Typekit.load({ async: true });}catch(e){}</script>
+<script src="https://use.typekit.net/tce1hoz.js"></script>
+<script>try{Typekit.load({ async: true });}catch(e){}</script>
 <style>
   
   
