--- a/Wedding.html
+++ b/Wedding.html
@@ -8,6 +8,9 @@
 
 <script src="https://use.typekit.net/tce1hoz.js"></script>
 <script>try{Typekit.load({ async: true });}catch(e){}</script>
+  
+<script src="https://use.typekit.net/dmj2emg.js"></script>
+<script>try{Typekit.load({ async: true });}catch(e){}</script>  
 <style>
   
   
@@ -46,14 +49,14 @@
   h2 {
 
     color: #556B2F;
-    font-family: "spumante",sans-serif;
+    font-family: "mrs-eaves-xl-serif",sans-serif;
     font-size: 50px;
 
   }
   
   h3 {
     color: #2F4F4F;
-    font-family: "spumante",sans-serif;
+    font-family: "mrs-eaves-xl-serif",sans-serif;
     font-size: 25px;
     text-decoration: underline;
   }
@@ -81,7 +84,7 @@
   p {
 
     color: #8B0000;
- font-family: "spumante",sans-serif;
+ font-family: "Times New Roman", Times, serif;
     font-size: 15px;
 
   }
