--- a/Wedding.html
+++ b/Wedding.html
@@ -182,6 +182,15 @@ header {
 
 }
   
+  #gifts {
+
+  margin: auto;
+  position: absolute;
+  -webkit-filter: contrast(4);
+   filter: contrast(4);
+   animation: gifts 5s infinite;
+}
+
   
 
 
