--- a/Wedding.html
+++ b/Wedding.html
@@ -181,16 +181,22 @@ header {
   overflow: hidden;
 
 }
-  
   #gifts {
-
-  
-  
   -webkit-filter: contrast(4);
    filter: contrast(4);
-   animation: gifts 5s infinite;
-}
-
+   animation: nissan-logo 5s infinite;
+  }
+  
+  @keyframes gifts {
+	0% {
+		filter: saturate(0);
+	}
+	50% {
+		filter: saturate(3);
+	}
+	100% {
+		filter: saturate(0);
+	}
   
 
 
