--- a/resume.html
+++ b/resume.html
@@ -13,6 +13,137 @@
 <script src="https://use.typekit.net/dmj2emg.js"></script>
 <script>try{Typekit.load({ async: true });}catch(e){}</script>  
   </head>
+  <style>
+     body{
+    text-align: center;
+ 
+   background-image: url(http://static4.businessinsider.com/image/5669ad3bdd089546488b459e-2831-2005/shutterstock_266369681.jpg);
+  background-size: 120%; 
+  }
+  h1 {
+   
+  font-family: "spumante",sans-serif;
+ 
+    color: #6495ED; 
+    font-size: 160px;
+  }
+  h2 {
+    color: #556B2F;
+    font-family: "mrs-eaves-xl-serif",sans-serif;
+    font-size: 50px;
+  }
+  
+  h3 {
+    color: #2F4F4F;
+    font-family: "mrs-eaves-xl-serif",sans-serif;
+    font-size: 25px;
+    text-decoration: underline;
+  }
+  
+   a {
+    color: #6495ED;
+    text-decoration: none;
+  }
+  
+  a:hover {
+    color: #008B8B;
+  }
+  
+  a:visited {
+    color: #6495ED;
+  }
+  p {
+    color: #8B0000;
+ font-family: "Times New Roman", Times, serif;
+    font-size: 15px;
+  }
+  
+  .decoration {
+  width: 930px;
+  /*centering*/
+  margin: 0 auto;
+}
+header {
+  padding: 150px;
+}
+  #events {
+    background-image: url(https://c2.staticflickr.com/4/3165/2558160805_c15dd40154_b.jpg);
+    overflow: hidden;
+    border-radius: 20px;
+    padding:25px;
+    margin: 25px;
+  }
+  
+  #march {
+    text-decoration: none;
+  }
+  article {
+    padding: 10px;
+    width: 270px;
+    height: 150px;
+    float:left;
+    background-image: url(http://webdesignerdepot.s3.amazonaws.com/default-images/26.jpg);
+    margin: 5px;
+    border-radius: 14px;
+    font-family: "spumante",sans-serif;
+    color: #430323;
+  }
+    #photo {
+    border-radius: 14px;
+    }
+#journey {
+  background-image: url(https://c2.staticflickr.com/4/3165/2558160805_c15dd40154_b.jpg);
+    overflow: hidden;
+    border-radius: 20px;
+    padding:25px;
+    margin: 25px;
+    overflow: hidden;
+}
+#stuff  {
+  background-image: url(https://c2.staticflickr.com/4/3165/2558160805_c15dd40154_b.jpg);
+  border-radius: 20px;
+  padding:25px;
+  margin: 25px;
+  overflow: hidden;
+}
+	
+#hosts {
+	-webkit-filter: contrast(4);
+   filter: contrast(4);
+   animation: hosts 5s infinite;
+  }
+	
+  #gifts {
+  -webkit-filter: contrast(4);
+   filter: contrast(4);
+   animation: gifts 5s infinite;
+  }
+  
+  @keyframes gifts {
+	0% {
+		filter: saturate(0);
+	}
+	50% {
+		filter: saturate(3);
+	}
+	100% {
+		filter: saturate(0);
+	}
+	  
+	  
+@keyframes hosts {
+	0% {
+		filter: saturate(0);
+	}
+	50% {
+		filter: saturate(3);
+	}
+	100% {
+		filter: saturate(0);
+	}
+  
+
+  </style>
 
 <body>
 
