--- a/resume.html
+++ b/resume.html
@@ -158,7 +158,7 @@ header {
 
   <header>
 
-    <h1 id="hosts">Jane & John</h1>
+    <img src="GWDA273/IMG_1974 copy.jpg">
     <br>
     <h3 id="march">March 11, 2017</h3>
 
