--- a/resume.html
+++ b/resume.html
@@ -158,7 +158,7 @@ header {
 
   <header>
 
-    <img src="GWDA273/IMG_1974 copy.jpg">
+    <img src="http://nandoe0351.me/GWDA273/IMG_1974%20copy.jpg">
     <br>
     <h3 id="march">March 11, 2017</h3>
 
