--- a/resume.html
+++ b/resume.html
@@ -82,7 +82,7 @@ header {
     width: 270px;
     height: 150px;
     float:left;
-    background-image: url(http://webdesignerdepot.s3.amazonaws.com/default-images/26.jpg);
+    background-image: url(http://www.publicdomainpictures.net/pictures/140000/velka/brushed-steel.jpg);
     margin: 5px;
     border-radius: 14px;
     font-family: "spumante",sans-serif;
@@ -92,7 +92,7 @@ header {
     border-radius: 14px;
     }
 #journey {
-  background-image: url(https://c2.staticflickr.com/4/3165/2558160805_c15dd40154_b.jpg);
+  background-image: url(http://www.publicdomainpictures.net/pictures/140000/velka/brushed-steel.jpg);
     overflow: hidden;
     border-radius: 20px;
     padding:25px;
@@ -100,7 +100,7 @@ header {
     overflow: hidden;
 }
 #stuff  {
-  background-image: url(https://c2.staticflickr.com/4/3165/2558160805_c15dd40154_b.jpg);
+  background-image: url(http://www.publicdomainpictures.net/pictures/140000/velka/brushed-steel.jpg);
   border-radius: 20px;
   padding:25px;
   margin: 25px;
