--- a/resume.html
+++ b/resume.html
@@ -67,7 +67,7 @@ header {
   padding: 150px;
 }
   #events {
-    background-image: url(https://c2.staticflickr.com/4/3165/2558160805_c15dd40154_b.jpg);
+    background-image: url(http://www.publicdomainpictures.net/pictures/140000/velka/brushed-steel.jpg);
     overflow: hidden;
     border-radius: 20px;
     padding:25px;
