--- a/resume.html
+++ b/resume.html
@@ -74,7 +74,7 @@ header {
     margin: 25px;
   }
   
-  #march {
+  #Designer {
     text-decoration: none;
   }
   article {
@@ -160,7 +160,7 @@ header {
 
     <img src="http://nandoe0351.me/GWDA273/IMG_1974%20copy.jpg" style="width: 190px; height: 250px">
     <br>
-    <h3 id="march">March 11, 2017</h3>
+    <h3 id="Designer">Graphic and Web Designer</h3>
 
 </header>
 
