--- a/resume.html
+++ b/resume.html
@@ -149,7 +149,7 @@ header {
 
 <nav>
 
-<a href="#" style="font-size: 20px"> Timeline        | </a> <a href="#" style="font-size: 20px">Us...         |</a> <a href="#" style="font-size: 20px"> Things to Know</a> 
+<a href="#" style="font-size: 25px"> Services        | </a> <a href="#" style="font-size: 25px">Experience         |</a> <a href="#" style="font-size: 25px"> Portfolio</a> 
 
 </nav>
 
@@ -157,6 +157,8 @@ header {
 
 
   <header>
+	  <h1 style="font-size= 50px">Fernando Escobar</h1>
+	  <br>
 
     <img src="http://nandoe0351.me/GWDA273/IMG_1974%20copy.jpg" style="width: 190px; height: 250px">
     <br>
