--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@
 
   <title>Fernando Escobar</title> 
 
-<script src="https://use.typekit.net/tce1hoz.js"></script>
+<script src="https://use.typekit.net/cll4fue.js"></script>
 <script>try{Typekit.load({ async: true });}catch(e){}</script>
   
 <script src="https://use.typekit.net/dmj2emg.js"></script>
