--- a/resume.html
+++ b/resume.html
@@ -22,9 +22,9 @@
   }
   h1 {
    
-  font-family: "spumante",sans-serif;
+  font-family: "ocra",sans-serif;
  
-    color: #6495ED; 
+    color: #F0F8FF; 
     font-size: 160px;
   }
   h2 {
@@ -41,7 +41,7 @@
   }
   
    a {
-    color: #6495ED;
+    color: #F0F8FF;
     text-decoration: none;
   }
   
@@ -50,7 +50,8 @@
   }
   
   a:visited {
-    color: #6495ED;
+    color: #F0F8FF;
+    
   }
   p {
     color: #8B0000;
