--- a/resume.html
+++ b/resume.html
@@ -119,6 +119,13 @@ header {
    filter: contrast(4);
    animation: gifts 5s infinite;
   }
+	  
+	  #me {
+		  -webkit-filter: contrast(4);
+   filter: contrast(4);
+   animation: gifts 5s infinite;
+	  }
+		  
   
   @keyframes gifts {
 	0% {
@@ -158,7 +165,7 @@ header {
 
 
   <header>
-	  <h1 style="font-size= 50px margin-top= 400px color=#F0F8FF">Fernando Escobar</h1>
+	  <h1 id="me" style="font-size= 50px margin-top= 400px color=#F0F8FF">Fernando Escobar</h1>
 	  <br>
 
     <img src="http://nandoe0351.me/GWDA273/IMG_1974%20copy.jpg" style="width: 190px; height: 250px">
