--- a/resume.html
+++ b/resume.html
@@ -121,6 +121,7 @@ header {
   }
 	  
 	  #me {
+		  color: #7FFF00;
 		  -webkit-filter: contrast(10);
    filter: contrast(10);
    animation: gifts 1s infinite;
