--- a/resume.html
+++ b/resume.html
@@ -7,11 +7,8 @@
 
   <title>Fernando Escobar</title> 
 
-<script src="https://use.typekit.net/cll4fue.js"></script>
-<script>try{Typekit.load({ async: true });}catch(e){}</script>
-  
-<script src="https://use.typekit.net/dmj2emg.js"></script>
-<script>try{Typekit.load({ async: true });}catch(e){}</script>  
+<script src="https://use.typekit.net/cvp7tdp.js"></script>
+<script>try{Typekit.load({ async: true });}catch(e){}</script> 
   </head>
   <style>
      body{
@@ -22,7 +19,7 @@
   }
   h1 {
    
-  font-family: "ocra",sans-serif;
+  font-family: ".tk-ocr-a-std",sans-serif;
  
     color: #F0F8FF; 
     font-size: 160px;
