--- a/resume.html
+++ b/resume.html
@@ -19,7 +19,7 @@
   }
   h1 {
    
-  font-family: ".tk-ocr-a-std",sans-serif;
+  font-family: "ocr-a-std",sans-serif;
  
     color: #F0F8FF; 
     font-size: 160px;
