--- a/resume.html
+++ b/resume.html
@@ -73,7 +73,14 @@ header {
   }
   
   #Designer {
-    text-decoration: none;
+	  font-family: "ocr-a-std",sans-serif;
+ 
+    color: #F0F8FF; 
+    font-size: 30px;
+	  -webkit-filter: contrast(4);
+   filter: contrast(4);
+   animation: hosts 5s infinite;
+    
   }
   article {
     padding: 10px;
