--- a/resume.html
+++ b/resume.html
@@ -9,6 +9,10 @@
 
 <script src="https://use.typekit.net/cvp7tdp.js"></script>
 <script>try{Typekit.load({ async: true });}catch(e){}</script> 
+	  
+	  <script src="https://use.typekit.net/uuz2sow.js"></script>
+<script>try{Typekit.load({ async: true });}catch(e){}</script>
+	  
   </head>
   <style>
      body{
@@ -26,7 +30,7 @@
   }
   h2 {
     color: #556B2F;
-    font-family: "mrs-eaves-xl-serif",sans-serif;
+    font-family: "industry-inc-base",sans-serif;
     font-size: 50px;
   }
   
@@ -47,7 +51,7 @@
   }
   p {
     color: #8B0000;
- font-family: "Times New Roman", Times, serif;
+ font-family: "industry-inc-base",sans-serif;
     font-size: 15px;
   }
   
@@ -85,7 +89,7 @@ header {
     background-image: url(http://www.publicdomainpictures.net/pictures/140000/velka/brushed-steel.jpg);
     margin: 5px;
     border-radius: 14px;
-    font-family: "spumante",sans-serif;
+    font-family: "industry-inc-base",sans-serif;
     color: #430323;
   }
     #photo {
